# sketches

./: LICENSE  README.md  sketches.cabal  stack.yaml
.github/workflows/: haskell.yml
src/Data/: Sketch.hs
src/Data/Sketch/: AMS.hs
